--- a/app/src/main/res/layout/dfragment_phone.xml
+++ b/app/src/main/res/layout/dfragment_phone.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".DFragmentPhone">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/phone_mid_frame_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
 
 </FrameLayout>
