--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".FragmentSetting">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/setting_recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
-
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/setting_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
 
     <!--
             <ImageView
@@ -25,7 +25,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="vertical">
-                &lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;
+                &lt;!&ndash;
                 <Button
                     android:id="@+id/btn_return"
                     android:layout_width="wrap_content"
@@ -44,4 +44,4 @@
                     android:layout_height="wrap_content"
                     android:text="前往注册" />
             </LinearLayout>-->
-</LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
