--- a/app/src/main/res/layout/activity_customer_service.xml
+++ b/app/src/main/res/layout/activity_customer_service.xml
@@ -13,27 +13,53 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         app:centerTextColor="#000"
-        app:centerTitle="@string/customer_service"
+        app:centerTitle="@string/chatrobot"
         app:centerTitleSize="18"
-        app:leftDrawable="@drawable/ic_out"
+        app:leftDrawable="@drawable/ic_out_black"
         app:leftText="@string/me"
         app:leftTextColor="#000"
-        app:leftTextSize="15"></com.example.robolink.CustomTitleBar>
+        app:leftTextSize="15" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#C7C7C7" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="11">
+        android:layout_weight="11"
+        android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="还没做好，这是客服界面" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/chatrobot_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true">
+
+        <com.example.robolink.CustomEditText
+            android:id="@+id/edit_question"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="7"
+            android:hint="请输入你想要问的问题"
+            android:imeOptions="actionSearch"
+            android:singleLine="true" />
+
+        <Button
+            android:id="@+id/btn_cancel"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="2"
+            android:background="@drawable/selector_button"
+            android:text="@string/cancel"
+            android:textColor="#fff" />
     </LinearLayout>
-
+    </RelativeLayout>
 </LinearLayout>
