--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -18,22 +18,297 @@
         app:leftDrawable="@drawable/ic_out_black"
         app:leftText="@string/me"
         app:leftTextColor="#000"
-        app:leftTextSize="15"></com.example.robolink.CustomTitleBar>
+        app:leftTextSize="15" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#C7C7C7" />
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="11">
+        android:layout_weight="11"
+        android:background="#e2dddd">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="还没做好，这是帮助界面" />
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:padding="5dp"
+                app:cardCornerRadius="4dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="80dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+
+                            android:layout_centerInParent="true"
+                            android:gravity="center"
+                            android:text="Fii是一家什么样的公司？"
+                            android:textColor="#000"
+                            android:textSize="18sp" />
+
+                        <ImageView
+                            android:id="@+id/help_expand_1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="60dp"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerInParent="true"
+                            android:background="@mipmap/ic_expand" />
+                        <ImageView
+                            android:id="@+id/help_colapse_1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="60dp"
+                            android:layout_centerInParent="true"
+                            android:layout_alignParentRight="true"
+                            android:background="@mipmap/ic_colapse"
+                            android:visibility="invisible"/>
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/content_1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:text="Fii是全球领先的通信网络设备、云服务设备、精密工具及工业机器人专业设计平台制造服务商，为客户提供以工业互联网平台为核心的新形态电子设备产品智能制造。。。。。"
+                        android:visibility="gone" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:padding="5dp"
+                app:cardCornerRadius="4dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="80dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+
+                            android:layout_centerInParent="true"
+                            android:gravity="center"
+                            android:text="Fii主要从事什么工作？"
+                            android:textColor="#000"
+                            android:textSize="18sp" />
+
+                        <ImageView
+                            android:id="@+id/help_expand_2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="60dp"
+                            android:layout_centerInParent="true"
+                            android:layout_alignParentRight="true"
+                            android:background="@mipmap/ic_expand" />
+                        <ImageView
+                            android:id="@+id/help_colapse_2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="60dp"
+                            android:layout_centerInParent="true"
+                            android:layout_alignParentRight="true"
+                            android:background="@mipmap/ic_colapse"
+                            android:visibility="invisible"/>
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/content_2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:text="Fii是全球领先的通信网络设备、云服务设备、精密工具及工业机器人专业设计平台制造服务商，为客户提供以工业互联网平台为核心的新形态电子设备产品智能制造。。。。。"
+                        android:visibility="gone" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:padding="5dp"
+                app:cardCornerRadius="4dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="80dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+
+                            android:layout_centerInParent="true"
+                            android:gravity="center"
+                            android:text="Fii的产品与服务是什么？"
+                            android:textColor="#000"
+                            android:textSize="18sp" />
+
+                        <ImageView
+                            android:id="@+id/help_expand_3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="60dp"
+                            android:layout_centerInParent="true"
+                            android:layout_alignParentRight="true"
+                            android:background="@mipmap/ic_expand" />
+                        <ImageView
+                            android:id="@+id/help_colapse_3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="60dp"
+                            android:layout_centerInParent="true"
+                            android:layout_alignParentRight="true"
+                            android:background="@mipmap/ic_colapse"
+                            android:visibility="invisible"/>
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/content_3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:text="Fii是全球领先的通信网络设备、云服务设备、精密工具及工业机器人专业设计平台制造服务商，为客户提供以工业互联网平台为核心的新形态电子设备产品智能制造。。。。。"
+                        android:visibility="gone" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:padding="5dp"
+                app:cardCornerRadius="4dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="80dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+
+                            android:layout_centerInParent="true"
+                            android:gravity="center"
+                            android:text="公司的经营理念是什么？"
+                            android:textColor="#000"
+                            android:textSize="18sp" />
+
+                        <ImageView
+                            android:id="@+id/help_expand_4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="60dp"
+                            android:layout_centerInParent="true"
+                            android:layout_alignParentRight="true"
+                            android:background="@mipmap/ic_expand" />
+                        <ImageView
+                            android:id="@+id/help_colapse_4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="60dp"
+                            android:layout_centerInParent="true"
+                            android:layout_alignParentRight="true"
+                            android:background="@mipmap/ic_colapse"
+                            android:visibility="invisible"/>
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/content_4"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:text="Fii是全球领先的通信网络设备、云服务设备、精密工具及工业机器人专业设计平台制造服务商，为客户提供以工业互联网平台为核心的新形态电子设备产品智能制造。。。。。"
+                        android:visibility="gone" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:padding="5dp"
+                app:cardCornerRadius="4dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="80dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_centerInParent="true"
+                            android:gravity="center"
+                            android:text="语音识别功能怎么使用？"
+                            android:textColor="#000"
+                            android:textSize="18sp" />
+
+                        <ImageView
+                            android:id="@+id/help_expand_5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="60dp"
+                            android:layout_centerInParent="true"
+                            android:layout_alignParentRight="true"
+                            android:background="@mipmap/ic_expand" />
+                        <ImageView
+                            android:id="@+id/help_colapse_5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="60dp"
+                            android:layout_centerInParent="true"
+                            android:layout_alignParentRight="true"
+                            android:background="@mipmap/ic_colapse"
+                            android:visibility="invisible"/>
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/content_5"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:text="Fii是全球领先的通信网络设备、云服务设备、精密工具及工业机器人专业设计平台制造服务商，为客户提供以工业互联网平台为核心的新形态电子设备产品智能制造。。。。。"
+                        android:visibility="gone" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
