--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"
-        app:centerTextColor="#000"></com.example.robolink.CustomTitleBar>
+        app:centerTextColor="#000"/>
 
     <View
         android:layout_width="match_parent"
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="10"
-        android:background="#E2DDDD"></com.example.robolink.CustomViewPager>
+        android:background="#E2DDDD"/>
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
