--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -32,6 +32,7 @@
         android:orientation="vertical">
 
         <com.example.robolink.CustomTitleBar
+            android:id="@+id/profile_photo"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_margin = "10dp"
@@ -46,6 +47,7 @@
             android:background="#C5C5C5"/>
 
         <com.example.robolink.CustomTitleBar
+            android:id="@+id/nickname"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_margin = "10dp"
@@ -60,6 +62,7 @@
             android:background="#C5C5C5"/>
 
         <com.example.robolink.CustomTitleBar
+            android:id="@+id/profile_email"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_margin = "10dp"
