--- a/app/src/main/res/layout/dfragment_phone.xml
+++ b/app/src/main/res/layout/dfragment_phone.xml
@@ -8,6 +8,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/phone_mid_frame_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
